--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 body{
-  background: rgb(2,0,36);
-  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
-  color: rgb(93, 89, 37);
+  background-image:  repeating-radial-gradient(circle at 0 0, transparent 0, #1e414d 32px), repeating-linear-gradient(#4346ec, #4346ec);
+  background-color: #1e414d;
   font-family: Georgia, serif;
   font-size: 20px;
   letter-spacing: 0.8px;
@@ -13,15 +12,20 @@ body{
   text-transform: capitalize;
 }
 
-.component{
+.component {
+  background-image: repeating-radial-gradient(circle at 0 0, transparent 0, #d2d2d2 32px), repeating-linear-gradient(#fafafa, #fafafa);
+  background-color: #d2d2d2;
   border: 3px solid wheat;
+  height: 80vh;
   border-radius: 25px;
   padding: 4vw;
+  overflow: auto; /* Scroll overflow */
 }
 
+
 @media (max-width: 800px) {
-  .dashboard-container {
-    /* Change gradient to go from top to bottom */
-    background: linear-gradient(159deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+  .component{
+    height: 55vh;
   }
 }
+
