--- a/src/components/AllowedPlates.css
+++ b/src/components/AllowedPlates.css
@@ -1,50 +1,74 @@
-.allowed-plates {
-    font-family: Arial, sans-serif;
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
+.container {
+    display: flex;
+    height: 50vh;
+    border-radius: 50px;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem;
+    background-color: #f5f5f5;
+    font-family: 'Roboto', sans-serif;
+    overflow: scroll;
+  }
+  
+  .title {
+    margin-bottom: 2rem;
+    color: #333;
+  }
+  
+  .input-container {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1rem;
+  }
+  
+  .input {
+    padding: 0.5rem;
     border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-input[type="text"] {
-    width: calc(50% - 10px);
-    margin: 5px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-button {
-    padding: 10px 20px;
-    margin: 5px;
+    border-radius: 4px;
+    font-size: 1rem;
+    margin-bottom: 0.5rem;
+  }
+  
+  .error-message {
+    color: red;
+    margin-bottom: 1rem;
+    font-size: 1rem;
+  }
+  
+  .button-container {
+    margin-bottom: 8px;
+  }
+  
+  .button {
+    padding: 0.5rem 1rem;
+    background-color: #007bff;
+    color: #fff;
     border: none;
-    border-radius: 5px;
+    border-radius: 4px;
+    font-size: 1rem;
     cursor: pointer;
-}
-
-.add-btn {
-    background-color: #4CAF50;
-    color: white;
-}
-
-.update-btn {
-    background-color: #008CBA;
-    color: white;
-}
-
-.delete-btn {
-    background-color: #f44336;
-    color: white;
-}
-
-.plate-item {
-    margin-top: 10px;
-    padding: 10px;
+    margin-right: 0.5rem;
+  }
+  
+  .button:hover {
+    background-color: #0056b3;
+  }
+  
+  .plate-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 4px;
+    margin-top: 2rem;
+  }
+  
+  .plate-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 0.5rem;
     border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-.plate-item button {
-    margin-left: 10px;
-}
+    border-radius: 4px;
+    margin-bottom: 0.5rem;
+  }
