--- a/src/components/VideoFeed.css
+++ b/src/components/VideoFeed.css
@@ -1,3 +1,10 @@
+.component{
+  padding: 20px;
+  display: 'flex';
+  flex-direction: 'column';
+   align-items: 'center'
+}
+
 /* VideoFeed.css */
 .videofeed{
     place-self: center; /* new */
